@@ -1,3 +1,8 @@
+2006-08-23  fabian
+
+    * Cleaned up iTermController.m, moved profile related code to PseudoTerminal.m
+    * Cleaned up PseudoTerminal.m, to make it more robust to session addition/removal.
+    
 2006-08-22  fabian
 
     * Tweaked PTYTextView to enhance text display, especially with small fonts.
